# limavel

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: publish_crates.yml  release.yml
src/: cli.rs  main.rs
src/ansible/: runner.rs
src/commands/: edit.rs  mod.rs  ssh.rs  start.rs
src/config/: lima_config.rs  limavel_config.rs
src/lima/: client.rs
templates/: default.yaml
