[package]
name = "limavel"
description = "A Laravel virtualized environment for macOS"
keywords = ["laravel", "vm", "virtualized", "development", "macOS"]
categories = ["command-line-utilities"]
version = "0.9.3"
edition = "2024"
license = "MIT"
authors = ["Juan Lago <juanparati@gmail.com>"]
repository = "https://github.com/limavel/limavel"

[profile.release]
strip = true

[[bin]]
name = "limavel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
shellexpand = "3"
thiserror = "2"
anyhow = "1"
colored = "3"
which = "7"
tempfile = "3"
tar = "0.4.45"
include_dir = "0.7"
